<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity"
            android:inputType="text"/>
        <EditText
            android:id="@+id/duration"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:inputType="number"/>
        <EditText
            android:id="@+id/cals"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calories"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/location"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"/>
        <EditText
            android:id="@+id/note"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:inputType="text"/>
        <ImageButton
            android:id="@+id/image"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:padding ="25dp"
            android:background="@drawable/box2"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_black_24dp"/>
        <Button
            android:id="@+id/save"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/box"
            android:text="@string/save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>