<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgpurple"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/fitdaily3"
            android:layout_marginBottom="10dp"
            android:layout_width="116dp"
            android:layout_height="36dp"
            android:src="@drawable/fitdaily"
            app:layout_constraintBottom_toTopOf="@+id/Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
            android:background="@drawable/box3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:text="@string/note"/>
                <ImageButton
                    android:id="@+id/date_picker"
                    android:background="@null"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/calendar"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:min="0"
                    android:max="100"
                    android:progress="50"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:indeterminate="false"
                    android:background="@drawable/circle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:progressDrawable="@drawable/progress"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_centerInParent="true">
                    <TextView
                        android:id="@+id/test"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/total" />
                    <TextView
                        android:id="@+id/cal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/home"
                        android:textSize="25sp"
                        android:text="1000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kcals" />
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_record"
                android:textColor="@color/black"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/datebox"/>
            <LinearLayout
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/rounded_pink"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:tint="@color/colorAccent"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:src="@drawable/fire"/>
                <TextView
                    android:textColor="@color/colorAccent"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/burned"
                    android:textSize="16sp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="0"
                    android:id="@+id/burn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1024"
                    android:textSize="16sp"/>
                <TextView
                    android:textColor="@color/black"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kcals"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@drawable/rounded_blue"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:tint="@color/home"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:src="@drawable/food"/>
                <TextView
                    android:textColor="@color/home"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/remaining"
                    android:textSize="16sp"/>
                <TextView
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_weight="0"
                    android:id="@+id/eaten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1024"
                    android:textSize="16sp"/>
                <TextView
                    android:textColor="@color/black"
                    android:layout_weight="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kcals"
                    android:textSize="12sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/daily"
                    android:textAllCaps="false"
                    android:text="@string/daily"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:background="@drawable/rounded_yellow"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/weekly"
                    android:textAllCaps="false"
                    android:text="@string/weekly"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:background="@drawable/rounded_yellow"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/monthly"
                    android:textAllCaps="false"
                    android:text="@string/monthly"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:background="@drawable/rounded_yellow"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>