<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp">
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_gravity="bottom"
            android:textSize="18sp"
            android:id="@+id/name"
            android:paddingStart="20dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/note"/>
       <LinearLayout
           android:gravity="end"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:textSize="18sp"
                   android:id="@+id/duration"
                   android:textAlignment="viewEnd"
                   android:layout_weight="3"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/note"/>
               <TextView
                   android:textSize="18sp"
                   android:paddingStart="10dp"
                   android:layout_weight="1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/min"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <TextView
                   android:textSize="18sp"
                   android:id="@+id/cal"
                   android:textAlignment="viewEnd"
                   android:layout_weight="3"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/note"/>
               <TextView
                   android:textSize="18sp"
                   android:paddingStart="10dp"
                   android:layout_weight="1"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/kcals"/>
           </LinearLayout>
       </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>